# recall_bot

./: .dockerignore  .env.ci.example  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: automation.yml
bot/: __main__.py  constants.py  container.py  logging_setup.py
bot/config_data/: config.py
bot/dialogs/start/: dialogs.py  getters.py  handlers.py
bot/domain/: cefr.py  matching.py  models.py  srs.py
bot/handlers/: actions.py  commands.py  fallback.py  help.py  learn.py  other.py  settings.py  start.py  stats.py
bot/locales/en/LC_MESSAGES/: txt.ftl
bot/locales/ru/LC_MESSAGES/: txt.ftl
bot/middlewares/: container.py
bot/repositories/: cards_repo.py  review_log_repo.py  users_repo.py  words_repo.py
bot/scheduler/: jobs.py
bot/services/: batch_service.py  learning_service.py  onboarding_service.py  reminder_service.py  stats_service.py
bot/states/: actions.py  learning.py  onboarding.py  settings.py
bot/utils/: keyboards.py
data/: basic_english.csv  build_dictionary.py  dictionary.csv  easy_english_expressions.csv  phrasal_verbs.csv  seed.py
data/fixtures/: test_words.csv
tests/: conftest.py  test_batch_service.py  test_learning_service.py  test_matching.py  test_srs.py  test_stats_service.py
