[project]
name = "recall-bot"
version = "0.1.0"
description = "Telegram bot for learning English vocabulary via spaced repetition (FSRS)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.26,<4",
    "pymongo>=4.12",
    "pydantic-settings>=2.8,<3",
    "aiogram-dialog>=2.3,<3",
    "fluentogram>=1.1.6,<2",
    "fsrs>=4.0,<7",
    "apscheduler>=3.10,<4",
    "python-Levenshtein>=0.25",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "freezegun>=1.5",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]
